[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/Breakfast Noodles DEMO.otf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/main-menu.png" type="Texture" id=2]
[ext_resource path="res://scenes/Main-Menu.gd" type="Script" id=3]
[ext_resource path="res://assets/Button.png" type="Texture" id=4]
[ext_resource path="res://assets/Minako-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/sounds/button_1.wav" type="AudioStream" id=6]

[sub_resource type="DynamicFont" id=1]
size = 80
outline_size = 6
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 60
outline_size = 5
outline_color = Color( 0.223529, 0.0117647, 0.345098, 1 )
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=3]
resource_name = "TitleDance"
length = 4.0
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath("Label:rect_position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 704, -0.25, 0, 0.25, 0, 768, -0.25, 0, 0.25, 0, 704, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2, 4 )
}

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 200, 100 )
modulate_color = Color( 0.65098, 0.282353, 0.0313726, 1 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 200, 100 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 200, 100 )

[sub_resource type="DynamicFont" id=7]
size = 70
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxTexture" id=8]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 200, 100 )
modulate_color = Color( 0.65098, 0.282353, 0.0313726, 1 )

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 200, 100 )

[sub_resource type="StyleBoxTexture" id=10]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 200, 100 )

[sub_resource type="DynamicFont" id=11]
size = 65
font_data = ExtResource( 5 )

[node name="Main-Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="Label" type="Label" parent="."]
margin_left = 1056.0
margin_top = 768.0
margin_right = 1589.0
margin_bottom = 864.0
custom_fonts/font = SubResource( 1 )
text = "TiM n' R.A.V.S."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 1184.0
margin_top = 864.0
margin_right = 1682.0
margin_bottom = 984.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.929412, 0, 0.631373, 1 )
text = "The game!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_default_blend_time = 1.0
anims/TitleDance = SubResource( 3 )

[node name="PlayButton" type="Button" parent="."]
margin_left = 1248.0
margin_top = 256.0
margin_right = 1515.0
margin_bottom = 369.0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 7 )
text = "PLAY!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsButton" type="Button" parent="."]
margin_left = 1248.0
margin_top = 384.0
margin_right = 1515.0
margin_bottom = 497.0
rect_pivot_offset = Vector2( 160, 32 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
custom_fonts/font = SubResource( 11 )
text = "Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="."]
margin_left = 1248.0
margin_top = 512.0
margin_right = 1515.0
margin_bottom = 625.0
rect_pivot_offset = Vector2( 160, 32 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
custom_fonts/font = SubResource( 11 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sounds" type="Node" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 6 )

[connection signal="mouse_entered" from="PlayButton" to="." method="_on_Button_mouse_entered"]
[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="mouse_entered" from="OptionsButton" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_entered" from="QuitButton" to="." method="_on_Button_mouse_entered"]
[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
